# baconator

./: README.md  setup.cfg
baconator/: __init__.py  baconator.py
rsc/: pythonify_names.py
